tests/baselines/reference/project/declarationsCascadingImports/node/declarationsCascadingImports.errors.txt
lib.es5.d.ts(48,21): error TS6054: File 'lib.es2009.uint16array' has an unsupported extension. The only supported extensions are '.ts', '.tsx', '.d.ts', '.cts', '.d.cts', '.mts', '.d.mts'.


==== m4.ts (0 errors) ====
    export class d {
    };
    export var x: d;
    export function foo() {
        return new d();
    }
    
==== useModule.ts (0 errors) ====
    declare module "quotedm1" {
        import m4 = require("m4");
        export class v {
            public c: m4.d;
        }
    }
    
    declare module "quotedm2" {
        import m1 = require("quotedm1");
        export var c: m1.v;
    }
    
    
    
    